// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`white space handling > consecutives whitespaces are condensed into a single space 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div> abc </div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`white space handling > non-breaking spaces are kept, never condensed 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>a  b c</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`white space handling > non-breaking spaces are kept, never condensed 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div><b>x</b>   <b>y</b></div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`white space handling > nothing is done in pre tags 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<pre>   </pre>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`white space handling > nothing is done in pre tags 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<pre>
          some text
        </pre>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`white space handling > nothing is done in pre tags 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<pre>
          
        </pre>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`white space handling > pre inside a div with a new line 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div><pre>SomeText</pre></div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`white space handling > white space only text nodes are condensed into a single space 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div> </div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`white space handling > whitespace in pre tags is kept under t-if and t-foreach 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<pre><block-child-0/></pre>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (true) {
      b2 = text(\`a   b\`);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`white space handling > whitespace in pre tags is kept under t-if and t-foreach 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, withKey } = helpers;
  
  let block1 = createBlock(\`<pre><block-child-0/></pre>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList([1]);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`i\`] = k_block2[i1];
      const key1 = ctx['i'];
      c_block2[i1] = withKey(text(\`a   b\`), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`white space handling > whitespace only text nodes with newlines are removed 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div><span>abc</span></div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;
